some vulkan code

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,9 @@
 [submodule "thirdParty/glfw"]
 	path = thirdParty/glfw
 	url = https://github.com/glfw/glfw.git
+[submodule "thirdParty/volk"]
+	path = thirdParty/volk
+	url = https://github.com/zeux/volk.git
+[submodule "thirdParty/VulkanMemoryAllocator"]
+	path = thirdParty/VulkanMemoryAllocator
+	url = https://github.com/GPUOpen-LibrariesAndSDKs/VulkanMemoryAllocator.git
