Almost there, now it builds but crashes and no GUI

--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "thirdParty/VulkanMemoryAllocator"]
 	path = thirdParty/VulkanMemoryAllocator
 	url = https://github.com/GPUOpen-LibrariesAndSDKs/VulkanMemoryAllocator.git
+[submodule "thirdParty/stb"]
+	path = thirdParty/stb
+	url = https://github.com/nothings/stb.git
