fixed for FreeBSD

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.13.0)
 project(DX12Lib-main VERSION 0.1.0)
 
-if(WIN32)
+if (CMAKE_SYSTEM_NAME STREQUAL "Windows")
 ADD_DEFINITIONS(-D_AFXDLL)
 ADD_DEFINITIONS(-DWIN32)
 ADD_DEFINITIONS(-D_UNICODE)
@@ -11,7 +11,7 @@ ADD_DEFINITIONS(-D_WINDOWS)
 # ADD_DEFINITIONS(-DUSE_PIX_DEBUG) # for attaching only
 set(CMAKE_MFC_FLAG 2)
 else()
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_DEBUG")
+# set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_DEBUG")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
 endif()
 
@@ -21,11 +21,13 @@ set(CMAKE_CXX_STANDARD_REQUIRED on)
 set(ROOT_FOLDER ${PROJECT_SOURCE_DIR})
 set(THIRD_PARTY_DIR ${ROOT_FOLDER}/thirdParty)
 
+if (NOT CMAKE_SYSTEM_NAME STREQUAL "FreeBSD")
 set(ASSIMP_BUILD_TESTS OFF CACHE BOOL "Build tests" FORCE)
 set(ASSIMP_INSTALL OFF CACHE BOOL "Build as submodule" FORCE)
 add_subdirectory(${THIRD_PARTY_DIR}/assimp)
+endif()
 
-if (WIN32)
+if (CMAKE_SYSTEM_NAME STREQUAL "Windows")
 add_subdirectory(${THIRD_PARTY_DIR}/DirectX-Headers)
 set(BUILD_TOOLS OFF CACHE BOOL "Build tex command-line tools" FORCE)
 set(BUILD_SAMPLE OFF CACHE BOOL "Build DDSView sample" FORCE)
