--- a/src/backend_vk/CMakeLists.txt
+++ b/src/backend_vk/CMakeLists.txt
@@ -7,7 +7,7 @@ enable_testing()
 ADD_DEFINITIONS(-D_DEBUG)
 
 add_definitions(-DVK_USE_PLATFORM_XCB_KHR)
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_DEBUG")
+set(#[[CMAKE_CXX_FLAGS_DEBUG]] "${CMAKE_CXX_FLAGS_DEBUG} -D_DEBUG")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++ -Wno-nullability-completeness")
 set(VOLK_STATIC_DEFINES VK_USE_PLATFORM_XLIB_KHR)
 
