--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,23 +22,24 @@ set(ROOT_FOLDER ${PROJECT_SOURCE_DIR})
 set(THIRD_PARTY_DIR ${ROOT_FOLDER}/thirdParty)
 
 if (NOT CMAKE_SYSTEM_NAME STREQUAL "FreeBSD")
-set(ASSIMP_BUILD_TESTS OFF CACHE BOOL "Build tests" FORCE)
-set(ASSIMP_INSTALL OFF CACHE BOOL "Build as submodule" FORCE)
-add_subdirectory(${THIRD_PARTY_DIR}/assimp)
+
 endif()
 
 if (CMAKE_SYSTEM_NAME STREQUAL "Windows")
+set(ASSIMP_BUILD_TESTS OFF CACHE BOOL "Build tests" FORCE)
+set(ASSIMP_INSTALL OFF CACHE BOOL "Build as submodule" FORCE)
+add_subdirectory(${THIRD_PARTY_DIR}/assimp)
 add_subdirectory(${THIRD_PARTY_DIR}/DirectX-Headers)
 set(BUILD_TOOLS OFF CACHE BOOL "Build tex command-line tools" FORCE)
 set(BUILD_SAMPLE OFF CACHE BOOL "Build DDSView sample" FORCE)
 set(BUILD_DX11 OFF CACHE BOOL "Build with DirectX11 Runtime support" FORCE)
 add_subdirectory(${THIRD_PARTY_DIR}/DirectXTex)
 else()
-set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "Build the GLFW example programs" FORCE)
-set(GLFW_BUILD_TESTS OFF CACHE BOOL "Build the GLFW test programs" FORCE)
-set(GLFW_BUILD_DOCS OFF CACHE BOOL  "Build the GLFW documentation" FORCE)
-set(GLFW_INSTALL OFF CACHE BOOL  "Generate installation target" FORCE)
-add_subdirectory(${THIRD_PARTY_DIR}/glfw)
+# set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "Build the GLFW example programs" FORCE)
+# set(GLFW_BUILD_TESTS OFF CACHE BOOL "Build the GLFW test programs" FORCE)
+# set(GLFW_BUILD_DOCS OFF CACHE BOOL  "Build the GLFW documentation" FORCE)
+# set(GLFW_INSTALL OFF CACHE BOOL  "Generate installation target" FORCE)
+# add_subdirectory(${THIRD_PARTY_DIR}/glfw)
 endif()
 
 add_subdirectory(src)
